--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,2 +1,7 @@
 [theme]
-base="dark"
+base="dark"  # Or "light"
+primaryColor="#C7074D"
+backgroundColor="#0E1117"
+secondaryBackgroundColor="#262730"
+textColor="#FAFAFA"
+font="sans serif"
